crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__float_dash.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"-0.61803398875\")"
---
Group(NbtNumber) at 0:0 - 0:14 {
    Joined(Float) `-0.61803398875` at 0:0 - 0:14
}

