crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__float_no_prec.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\".37412\")"
---
Group(NbtNumber) at 0:0 - 0:6 {
    Joined(Float) `.37412` at 0:0 - 0:6
}

