crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__float_no_trail.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"645423.\")"
---
Group(NbtNumber) at 0:0 - 0:7 {
    Joined(Float) `645423.` at 0:0 - 0:7
}

