crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__float_only_dot.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\".\")"
---
Joined(UnquotedString) `.` at 0:0 - 0:1

