crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__float_unsigned.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"0.5772156649\")"
---
Group(NbtNumber) at 0:0 - 0:12 {
    Joined(Float) `0.5772156649` at 0:0 - 0:12
}

