crates/parse/src/mcf/grammar/snapshots/mcfunction_parse__mcf__grammar__nbt__tests__list_empty.snap
---
source: crates/parse/src/mcf/grammar/nbt.rs
expression: "parse_nbt(\"[]\")"
---
Group(NbtSequence) at 0:0 - 0:2 {
    Token(LBracket) `[` at 0:0 - 0:1
    Token(RBracket) `]` at 0:1 - 0:2
}

